Fixed an issue where clicking on links in the navigation would have the target hidden under the header

--- a/css/project-page.scss
+++ b/css/project-page.scss
@@ -245,6 +245,18 @@ body.bible, body.tq, body.tn {
         }
       }
     }
+
+  }
+}
+body{
+  .content{
+    [id]::before {
+      content: '';
+      display: block;
+      height:      140px;
+      margin-top: -140px;
+      visibility: hidden;
+    }
   }
 }
 body.bible{
